Fixed .food alignment issue and disabled store search autocomplete.

--- a/lunchbreak/frontend/scss/pages/_store.scss
+++ b/lunchbreak/frontend/scss/pages/_store.scss
@@ -86,6 +86,7 @@
                     overflow: hidden;
                     box-sizing: border-box;
                     border: 1px solid $grey-light;
+                    vertical-align: top;
 
                     .food-top {
                         .food-text {
